--- a/mplayer.html
+++ b/mplayer.html
@@ -5,7 +5,7 @@
     <title>Music Player</title>
   </head>
   <body>
-    <h1>music player</h1>
+    <h1>Music Player</h1>
     <p>Let's choose the song!</p>
     <p>※音量注意</p>
     <img src="arona_portrait.png" alt="stop">
