音楽再生機能追加

--- a/mplayer.html
+++ b/mplayer.html
@@ -9,6 +9,7 @@
     <p>Let's choose the song!</p>
     <p>※音量注意</p>
     <img src="arona_portrait.png" alt="stop">
+    <audio src="AniPicBGM3.mp3" controls></audio>
     <script>
       function getYoubi(year, month, day){
         var youbi = ['日', '月', '火', '水', '木', '金', '土'];
