--- a/mplayer.html
+++ b/mplayer.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Music Player</title>
-    <link rel="styleseat" href="mplayer.css">
+    <link rel="stylesheet" href="mplayer.css">
   </head>
   <body>
     <h1>Music Player</h1>
