--- a/mplayer.html
+++ b/mplayer.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="mplayer.css">
   </head>
   <body>
+    <div class="appframe">
     <h1>Music Player</h1>
     <p>Let's choose the song!</p>
     <p>※音量注意</p>
@@ -15,5 +16,6 @@
       <li data-file="AniPicBGM3.mp3">music No.1</li>
       <li data-file="RUN.EVE.RUNpart1.mp3">music No.2</li>
     </ul>
+    </div>
   </body>
 </html>
