--- a/mplayer.html
+++ b/mplayer.html
@@ -16,6 +16,7 @@
        <li data-file="AniPicBGM3.mp3" class="active">music No.1</li>
        <li data-file="RUN.EVE.RUNpart1.mp3">music No.2</li>
      </ul>
+     <script src="mplayer.js" charset="utf-8"></script>
     </div>
   </body>
 </html>
