--- a/mplayer.html
+++ b/mplayer.html
@@ -11,6 +11,7 @@
      <p>Let's choose the song!</p>
      <p>※音量注意</p>
      <img src="arona_portrait.png" alt="stop">
+     <audio src="AniPicBGM3.mp3" controls></audio>
      <ul>
        <li data-file="AniPicBGM3.mp3" class="active">music No.1</li>
        <li data-file="RUN.EVE.RUNpart1.mp3">music No.2</li>
