--- a/mplayer.html
+++ b/mplayer.html
@@ -14,7 +14,7 @@
      <audio src="AniPicBGM3.mp3" controls></audio>
      <ul>
        <li data-file="AniPicBGM3.mp3" class="active">music No.1</li>
-       <li data-file="RUN.EVE.RUNpart1.mp3">music No.2</li>
+       <li data-file="RUN-EVE-RUNpart1.mp3">music No.2</li>
      </ul>
      <script src="mplayer.js" charset="utf-8"></script>
     </div>
