--- a/mplayer.html
+++ b/mplayer.html
@@ -8,7 +8,7 @@
   <body>
     <div class="appframe">
      <h1>Music Player</h1>
-     <p>Let's choose the song!</p>
+     <p>Let's choose the song!<a id="random" href="#">ランダム</a></p>
      <p>※音量注意</p>
      <img src="arona_portrait_2.png" alt="stop">
      <audio src="AniPicBGM3.mp3" controls></audio>
