--- a/mplayer.html
+++ b/mplayer.html
@@ -10,7 +10,7 @@
      <h1>Music Player</h1>
      <p>Let's choose the song!<a id="random" href="#">ランダム</a></p>
      <p>※音量注意</p>
-     <img src="arona_portrait_2.png" alt="stop">
+     <img src="pict_stop.png" alt="stop">
      <audio src="AniPicBGM3.mp3" controls></audio>
      <ul>
        <li data-file="AniPicBGM3.mp3" class="active">music No.1</li>
